--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,7 +18,7 @@ Theme Styles
 
 body {
   color:#373737;
-  background: #212121;
+  background: #8C1515;
   font-size: 18px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -224,7 +224,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('../images/blacktocat.png') #000 no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
@@ -232,7 +232,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
+  background: #8C1515;
 }
 
 #header_wrap .inner {
@@ -305,7 +305,7 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #212121;
+  background: #8C1515;
 }
 
 /*******************************************************************************
